<resources>
    <string name="app_name">Cute Todo</string>
    <string name="fa_lorem">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</string>
    <string name="en_lorem">Lorem ipsum dolor sit amet.</string>
    <string name="large_lorem">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>

    <string name="ellipsis">…</string>

    <string name="add">اضافه کردن</string>
    <string name="add_new_todo">اضافه کردن کار جدید</string>
    <string name="enter_todo_name">عنوان کار را وارد کنید</string>
    <string name="select_category">انتخاب دسته بندی</string>
    <string name="priority">اولویت</string>
    <string name="low">کم</string>
    <string name="normal">عادی</string>
    <string name="high">زیاد</string>
    <string name="save">ذخیره</string>

    <string name="edit">ویرایش</string>
    <string name="edit_todo">ویرایش کار</string>
    <string name="edit_category">ویرایش دسته بندی</string>

    <string name="add_new_category">اضافه کردن دسته جدید</string>
    <string name="enter_category_name">عنوان دسته را وارد کنید</string>
    <string name="categories">دسته بندی‌ها</string>
    <string name="delete">حذف</string>
    <string name="info">درباره ما</string>

    <string name="search">جستجو</string>
    <string name="search_in_todo_list">جستجو در لیست کارها</string>
    <string name="search_note">عنوان کار را وارد کرده و منتظر بمانید…</string>
    <string name="search_result"><![CDATA[<font color=#8d8d8d>"نتایج بر اساس: %3$s</font><br>]]>%1$d نتیجه از مجموع %2$d کار یافت شد!</string>
    <!--    %2$d-->
    <!--    %1$d-->
    <!--    %1$d نتیجه از مجموع %2$d کار یافت شد!-->
    <!--    \n-->

    <!--    <![CDATA[<font color=#1F8EF3>"نتایج بر اساس: %3$s</font><br>]]>%1$d نتیجه از مجموع %2$d کار یافت شد!-->
    <string name="done_todo">کارهای انجام شده</string>
    <string name="undone_todo">کارهای انجام نشده</string>

    <string name="back">بازگشت</string>
    <string name="more">بیشتر</string>
    <string name="high_priority">اولویت: زیاد</string>
    <string name="normal_priority">اولویت: عادی</string>
    <string name="low_priority">اولویت: کم</string>

    <string name="delete_message">آیا از حذف این مورد اطمینان دارید؟</string>
    <string name="cancel">انصراف</string>


    <string name="todos_is_empty">لیست کارها خالی است!</string>
    <string name="todos_done_is_empty">کار انجام شده ای موجود نیست!</string>
    <string name="categories_is_empty">لیست دسته‌بندی‌ها خالی است!</string>
    <string name="delete_all_todos">حذف همه کارها</string>
    <string name="delete_all_done_todos">حذف کارهای انجام شده</string>
    <string name="delete_all_todos_message">همه %1$d کار موجود حذف شود؟</string>
    <string name="delete_all_done_todos_message">%1$d کار انجام شده حذف شود؟</string>
    <string name="delete_all_categories">حذف همه دسته‌بندی‌ها</string>
    <string name="delete_all_categories_message">همه %1$d دسته‌بندی موجود حذف شود؟</string>

    <string name="delete_todo">حذف کار</string>
    <string name="delete_todo_message"> کار \"%1$s\" حذف شود؟</string>

    <string name="delete_category">حذف دسته بندی</string>
    <string name="delete_category_message"> دسته \"%1$s\" حذف شود؟</string>
    <string name="close">بستن</string>
    <string name="select_one_category">یک دسته‌بندی انتخاب کنید.</string>
    <string name="empty_categories">دسته‌بندی وجود ندارد!</string>
    <string name="manage_categories_notes">از طریق گزینه <![CDATA[<font color=#1F8EF3>دسته‌بندی‌ها</font>]]> می توانید دسته‌ جدیدی اضافه کنید.</string>
    <string name="categories_empty_notes">از طریق گزینه <![CDATA[<font color=#1F8EF3>اضافه کردن</font>]]> در پایین صفحه،<![CDATA[<br>]]> می توانید دسته‌بندی جدیدی اضافه کنید.</string>
    <string name="todos_empty">لیست کارها خالی است!</string>
    <!--    <string name="todos_empty_notes">از طریق دکمه <font color='#1F8EF3'>اضافه کردن</font> در پایین صفحه،\nبه سادگی می توانید یک کار جدید ایجاد کنید.</string>-->
    <string name="todos_empty_notes">از طریق دکمه <![CDATA[<font color=#1F8EF3>اضافه کردن</font>]]> در پایین صفحه،<![CDATA[<br>]]>به سادگی می توانید یک کار جدید ایجاد کنید.</string>

    <string name="advanced_filter">فیلتر پیشرفته</string>
    <string name="sort_todos_by">مرتب کردن لیست کارها بر اساس:</string>
    <string name="high_priority_filter">اولویت زیاد</string>
    <string name="normal_priority_filter">اولویت عادی</string>
    <string name="low_priority_filter">اولویت کم</string>
    <string name="apply_filter">اعمال فیلتر</string>
    <string name="show_filter_result">نمایش نتایج</string>
    <string name="clear_filter">حذف فیلترها</string>

    <string name="empty_todos_with_filter">کاری با فیلتر اعمال شده پیدا نشد!</string>
    <string name="empty_todos_with_filter_notes">لطفا فیلترها را بررسی کرده و مجددا تلاش کنید.</string>

    <string name="min_chars_search">حداقل عبارت قابل جستجو ۳ حرف می باشد!</string>
    <string name="todo_not_found">کاری با %1$s <![CDATA[<font color=#1F8EF3>"%2$s</font>]]> پیدا نشد.</string>

    <string name="search_by">جستجو بر اساس</string>
    <string name="search_by_todo">عنوان کار</string>
    <string name="search_by_category">عنوان دسته‌بندی</string>
    <string name="search_by_both">هر دو عنوان با هم (کار و دسته‌بندی)</string>
    <string name="search_mode_notes">یکی از موارد زیر را انتخاب کنید.\nجستجو بر اساس مورد انتخاب شده انجام می شود.</string>
    <string name="set_reminder">تنظیم یادآوری</string>
    <string name="select_date">انتخاب تاریخ</string>
    <string name="select_time">انتخاب ساعت</string>
    <string name="set_date_time">انتخاب تاریخ و ساعت</string>
    <string name="set_time_notes">ساعتی جهت دریافت هشدار تنظیم کنید.</string>

    <string name="notification_header">🔔 یادآوری انجام کار 🔔</string>
    <string name="notification_content">کاری با عنوان \"%1$s\"، برای اکنون زمان بندی شده است.\nجهت مشاهده جزییات لمس کنید.</string>

    <string name="todo_detail">جزییات کار</string>
    <string name="todo_title">عنوان کار:</string>
    <string name="todo_category">دسته بندی:</string>
    <string name="todo_priority">اولویت:</string>
    <string name="todo_reminder">یادآوری تنظیم شده:</string>
    <string name="todo_created_at">ایجاد شده در:</string>
    <string name="todo_updated_at">آخرین ویرایش:</string>
    <string name="share_using">ارسال از طریق:</string>

    <string name="detail">جزییات</string>

    <string name="reminder_guide">با تنظیم یادآوری می توانید در تاریخ و ساعت زمان بندی شده، پیامی جهت یادآوری انجام کار، در تلفن همراه خود دریافت کنید.</string>

    <string name="reminer_title">یادآوری انجام کار</string>
    <string name="set_done">انجام شد</string>

    <string name="label_share_menu">ذخیره در کارها</string>

    <string name="todo_added_successfully">کار با موفقیت اضافه شد. 🚀</string>
    <string name="todo_done_successfully">🎉 کار با موفقیت انجام شد. 🎉</string>
    <string name="todo_added_successfully_simple">کار با موفقیت اضافه شد.</string>
    <string name="todo_edited_successfully_simple">کار با موفقیت ویرایش شد.</string>
    <string name="todo_done_successfully_simple">کار با موفقیت انجام شد.</string>

    <string name="is_done">انجام شده</string>
    <string name="is_undone">انجام نشده</string>
    <string name="status">وضعیت:</string>

    <string name="accept">تایید</string>

    <string name="passedDateTitle">یادآوری بدون پیام</string>
    <string name="passedDateMessage">تاریخ انتخاب شده گذشته است، در نتیجه پیام یادآوری را دریافت نخواهید کرد و تنظیم این یادآوری صرفا نمایشی می باشد!\nبا این حال ادامه می دهید؟</string>
    <string name="passedTimeMessage">ساعت انتخاب شده گذشته است، در نتیجه پیام یادآوری را دریافت نخواهید کرد و تنظیم این یادآوری صرفا نمایشی می باشد!\nبا این حال ادامه می دهید؟</string>
    <string name="keep_continue">ادامه</string>
    <string name="editDate">ویرایش تاریخ</string>
    <string name="editTime">ویرایش ساعت</string>
    <string name="scheduled_todos">کارهای زمانبندی شده</string>
    <string name="today_todos">کارهای امروز</string>

    <string name="todo_filter_type">نوع کار:</string>
    <string name="todo_filter_category">دسته‌بندی:</string>
    <string name="todo_filter_priority">اولویت:</string>
    <string name="notification_channel_id">cute-todo-channel-id</string>

    <string name="share">ارسال</string>
    <string name="share_type">نوع ارسال:</string>
    <string name="normal_share">ارسال عادی</string>
    <string name="advenced_share">ارسال پیشرفته</string>

    <string name="open_notif_action">نمایش کار 🔍</string>
    <string name="open_detail">باز کردن جزییات</string>
    <string name="show_more"><![CDATA[نمایش بیشتر…]]></string>
    <string name="fastShow">نمایش سریع</string>

    <string name="settings">تنظیمات</string>
    <string name="theme">ظاهر برنامه</string>
    <string name="select_theme">انتخاب ظاهر برنامه</string>
    <string name="about_me">درباره من</string>
    <string name="day_mode">حالت روز</string>
    <string name="night_mode">حالت شب</string>
    <string name="sysdef_mode">بر اساس تنظیمات گوشی</string>

</resources>