<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuTickDone"
        android:icon="@drawable/ic_simple_tick_big"
        android:title="@string/set_done"
        app:iconTint="?attr/colorOnBackground" />

    <item
        android:id="@+id/menuEdit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:iconTint="?attr/colorOnBackground" />

    <item
        android:id="@+id/menuDetail"
        android:icon="@drawable/ic_detail"
        android:title="@string/detail"
        app:iconTint="?attr/colorOnBackground" />

    <item
        android:id="@+id/menuFastShow"
        android:icon="@drawable/ic_discovery_fastshow"
        android:title="@string/fastShow"
        app:iconTint="?attr/colorOnBackground" />

    <item
        android:id="@+id/menuShare"
        android:icon="@drawable/ic_send"
        android:title="@string/share"
        app:iconTint="?attr/colorOnBackground" />

    <item
        android:id="@+id/menuDelete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:iconTint="@color/red" />
</menu>