<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuCategories"
        android:icon="@drawable/ic_category"
        android:title="@string/categories"
        app:iconTint="?attr/colorOnBackground" />

    <item
        android:id="@+id/menuSettings"
        android:icon="@drawable/ic_theme"
        android:title="@string/theme"
        app:iconTint="?attr/colorOnBackground" />

    <item
        android:id="@+id/menuDeleteAll"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_all_todos"
        app:iconTint="@color/red" />

    <item
        android:id="@+id/menuDeleteAllDone"
        android:icon="@drawable/ic_delete_all_done"
        android:title="@string/delete_all_done_todos"
        app:iconTint="@color/red" />

    <item
        android:id="@+id/menuAboutMe"
        android:icon="@drawable/ic_info_square"
        android:title="@string/about_me"
        app:iconTint="?attr/colorOnBackground" />

</menu>