<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/transparent"
    android:padding="15dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/txtTitle"
        style="@style/TextNormalMD18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/advanced_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardClose"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="5dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtTitle"
        app:rippleColor="@color/HighlightBlue"
        tools:ignore="TouchTargetSizeCheck">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/close"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_close_simple"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/txtSortBy"
        style="@style/TextNormalMD16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:text="@string/sort_todos_by"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@id/cardClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/aChkBoxDone"
        style="@style/CheckBoxFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/done_todo"
        app:layout_constraintEnd_toEndOf="@id/cardClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSortBy"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/aChkBoxUndone"
        style="@style/CheckBoxFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/undone_todo"
        app:layout_constraintEnd_toEndOf="@id/cardClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aChkBoxDone"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:alpha="0.8"
        android:background="@color/line_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aChkBoxUndone" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/aChkBoxLow"
        style="@style/CheckBoxFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/low_priority_filter"
        app:layout_constraintEnd_toEndOf="@id/cardClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/aChkBoxNormal"
        style="@style/CheckBoxFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/normal_priority_filter"
        app:layout_constraintEnd_toEndOf="@id/cardClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aChkBoxLow"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/aChkBoxHigh"
        style="@style/CheckBoxFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/high_priority_filter"
        app:layout_constraintEnd_toEndOf="@id/cardClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aChkBoxNormal"
        tools:ignore="TextContrastCheck" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aChkBoxHigh"
        app:layout_constraintVertical_bias="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mBtnApplyFilter"
            style="@style/TextNormalMD16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/blue"
            android:paddingVertical="13dp"
            android:stateListAnimator="@null"
            android:text="@string/apply_filter"
            android:textColor="@color/white"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/mBtnClearFilter"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/rippleBlue"
            app:strokeWidth="0dp"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mBtnClearFilter"
            style="@style/TextNormalMD16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/filter_clear_color"
            android:paddingVertical="13dp"
            android:stateListAnimator="@null"
            android:text="@string/clear_filter"
            android:textColor="@color/blue"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/mBtnApplyFilter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/blue"
            app:strokeWidth="0dp"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
