<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/transparent"
    android:padding="15dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/indicator"
        android:layout_width="45dp"
        android:layout_height="6dp"
        android:layout_marginTop="4dp"
        android:alpha="0.3"
        app:cardBackgroundColor="?attr/grayTint"
        app:cardCornerRadius="3dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        style="@style/TextNormalMD16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/select_theme"
        android:textColor="?attr/middleGray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/indicator" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aImgClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/close"
        android:focusable="true"
        android:padding="11dp"
        app:layout_constraintBottom_toBottomOf="@id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtTitle"
        app:srcCompat="@drawable/ic_close_simple"
        app:tint="?attr/grayTint"
        tools:ignore="TouchTargetSizeCheck" />


    <RadioGroup
        android:id="@+id/radioGP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="end|right"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/aImgClose"
        app:layout_constraintTop_toBottomOf="@id/txtTitle">

        <RadioButton
            android:id="@+id/radioBtnSysDef"
            style="@style/RadioButtonClickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sysdef_mode"
            android:textColor="?attr/colorOnBackground" />

        <RadioButton
            android:id="@+id/radioBtnDay"
            style="@style/RadioButtonClickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day_mode"
            android:textColor="?attr/colorOnBackground" />

        <RadioButton
            android:id="@+id/radioBtnNight"
            style="@style/RadioButtonClickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/night_mode"
            android:textColor="?attr/colorOnBackground" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
