<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/transparent"
    android:padding="15dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/txtTitle"
        style="@style/TextNormalMD16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/search_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aImgClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="5dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/close"
        android:focusable="true"
        android:padding="11dp"
        app:layout_constraintBottom_toBottomOf="@id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtTitle"
        app:srcCompat="@drawable/ic_close_simple"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtSortBy"
        style="@style/TextRG14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:text="@string/search_mode_notes"
        android:textColor="@color/gray_text"
        app:layout_constraintEnd_toEndOf="@id/aImgClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        tools:ignore="TextContrastCheck" />


    <RadioGroup
        android:id="@+id/radioGP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        android:gravity="end|right"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/aImgClose"
        app:layout_constraintTop_toBottomOf="@id/txtSortBy">

        <RadioButton
            android:id="@+id/radioBtnTodo"
            style="@style/RadioButtonClickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_by_todo" />

        <RadioButton
            android:id="@+id/radioBtnCategory"
            style="@style/RadioButtonClickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_category" />

        <RadioButton
            android:id="@+id/radioBtnBoth"
            style="@style/RadioButtonClickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_both" />

    </RadioGroup>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGP"
        app:layout_constraintVertical_bias="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mBtnClose"
            style="@style/TextNormalMD16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:backgroundTint="@color/blue"
            android:gravity="center"
            android:letterSpacing="0"
            android:textSize="15sp"
            android:paddingVertical="11dp"
            android:stateListAnimator="@null"
            android:text="@string/close"
            android:textColor="@color/white"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/rippleBlue"
            app:strokeWidth="0dp"
            tools:ignore="TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
