<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/whiteBlue">

    <TextView
        android:id="@+id/txtTitle"
        style="@style/ToolbarTitleEN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toStartOf="@id/aImgSearch"
        app:layout_constraintStart_toEndOf="@id/aImgGlobalMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aImgGlobalMenu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/categories"
        android:focusable="true"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtTitle"
        app:srcCompat="@drawable/ic_category" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aImgSearch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/search"
        android:layout_marginEnd="20dp"
        android:focusable="true"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtTitle"
        app:srcCompat="@drawable/ic_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_todo"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aImgSearch" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <View
        android:id="@+id/shadow"
        style="@style/ShadowButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/mBtnAdd"
        app:layout_constraintEnd_toEndOf="@id/mBtnAdd"
        app:layout_constraintStart_toStartOf="@id/mBtnAdd"
        app:layout_constraintTop_toTopOf="@id/mBtnAdd" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mBtnAdd"
        style="@style/MaterialButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mb_button"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineV85"
        app:layout_constraintStart_toStartOf="@id/guidelineV15"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>